@@ -423,7 +423,7 @@ pm-radium-sulfate=Radium sulfate
 pm-radium-chloride=Radium chloride
 pm-barium-nitrate=Barium nitrate
 pm-barium-ore=Barium ore
-
+pm-solid-mercury=Solid mercury
 
 automation-science-pack=Transition metal pack
 logistic-science-pack=Advanced transition metal pack
